[package]
name = "neetcode_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
fantoccini = "0.19.3"
tokio = { version = "1.28.2", features = ["full"] }
webdriver = "0.47.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
log = "0.4.17"
env_logger = "0.10.0"
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
tempfile = "3.8.0"
zip = "0.6.6"
tokio-util = { version = "0.7.8", features = ["io"] }
futures-util = "0.3.28"
futures-io = "0.3.28"
